test/error/JBackQuote1.t
%include{ TNode.tom }
{
  `XML(<A>
          <B/>
        </A>);
  
  `XML(<A at1="foo" at2=x at3=dd("text")/>);
  ``toto
}
 
